README.md update, cleanup + refactoring, fix warnings